[metadata]
name = sobo_assignment
version = 0.1.0
description = Single-objective Bayesian Optimization Assignment
author = Student

[options]
packages = find:
python_requires = >=3.8
install_requires =
    honegumi>=0.1.0
    ax-platform>=0.3.0
    numpy>=1.20.0
    matplotlib>=3.5.0
    seaborn>=0.11.0

[options.extras_require]
dev =
    pytest>=7.0.0
    black>=22.0.0
    pylint>=2.12.0